...
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>

    <!-- Button Strings -->
    <string name="pinLogin">Login with Pin</string>
    <string name="biometricLogin">Login with Biometrics</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="registerBtn">Register</string>
    <string name="deleteUserSummary">Permanently delete the user that is logged in.</string>

    <!-- Login Messages -->
    <string name="username">Username</string>
...
