...
    >

    <include layout="@layout/app_bar" android:id="@+id/appBar" />

    <com.google.android.material.tabs.TabLayout
        android:layout_below="@id/appBar"
        android:id="@+id/transactionTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabMode="fixed"
        >
    </com.google.android.material.tabs.TabLayout>
...
